--- a/pom.xml
+++ b/pom.xml
@@ -47,7 +47,12 @@
     <artifactId>commons-lang3</artifactId>
     <version>3.12.0</version>
 </dependency>
-
+      <dependency>
+          <groupId>io.cucumber</groupId>
+          <artifactId>cucumber-picocontainer</artifactId>
+          <version>7.0.0</version>
+          <scope>test</scope>
+      </dependency>
   </dependencies>
 
   <build>
